1) Improved the project architecture and configured the routing of views belonging to the DataProcessing directory: GetSubtitle.cshtml and Subtitle.cshtml. 2) Enhanced the methods: GetTextFromSubtitle and ShowListOfUniqueWordsOfMovie of the HandleData class. 3) Implemented the ability to obtain subtitles by selecting the movie title from two provided lists on the GetSubtitle.cshtml page: an exact match list and an inclusive list based on the user's query, and displayed the subtitles to the user. 4) Implemented the retrieval of a list of unique words from the subtitle text and displayed them to the user. 5) Developed the interface of the Subtitle.cshtml and Errors.cshtml pages. 6) Implemented try/catch blocks to protect against NullReferenceException in the methods. At the top level of the stack, I implemented handling of this exception and called the Error.cshtml page with a textual notification for the user. 7) Implemented automatic redirection of the user to the previous page.

--- a/EnglishBySubtitle.Mvc/Views/DataProcessing/Getsubtitle.cshtml
+++ b/EnglishBySubtitle.Mvc/Views/DataProcessing/Getsubtitle.cshtml
@@ -16,10 +16,12 @@
             if (Model.Item1.GetLength(0) == 0)
             {
                 <table>
-                    <tr>
-                        <td class="td_left">By exact match</td>
-                        <td class="td_right">Subtitles not found</td>
-                    </tr>
+                    <thed>
+                        <tr>
+                            <td class="td_left">By exact match</td>
+                            <td class="td_right">Subtitles not found</td>
+                        </tr>
+                    </thed>
                 </table>
             }
             else
@@ -27,11 +29,9 @@
                 <table>
                     @for (int i = 0; i < Model.Item1.GetLength(0); i++)
                     {
-                        <tr class="tr_active" onclick="myFunction(this)">
+                        <tr class="tr_active" data-idsubtitle="@Model.Item1[i, 3]" onclick="getSubtitleById(this)">
                             <td class="td_left">@Model.Item1[i, 0]</td>
                             <td class="td_right">@Model.Item1[i, 1]</td>
-                            @*<td>@Model.Item1[i, 2]</td>*@
-                            @*<td><input type="radio" name="radiobtn" value="@Model.Item1[i, 2]"></td>*@
                         </tr>
                     }
                 </table>
@@ -55,11 +55,9 @@
                 <table>
                     @for (int i = 0; i < Model.Item2.GetLength(0); i++)
                     {
-                        <tr class="tr_active" onclick="myFunction(this)">
+                        <tr class="tr_active" data-idsubtitle="@Model.Item2[i, 3]" onclick="getSubtitleById(this)">
                             <td class="td_left">@Model.Item2[i, 0]</td>
                             <td class="td_right">@Model.Item2[i, 1]</td>
-                            @*<td>@Model.Item2[i, 2]</td>*@
-                            @*<td><input type="radio" name="radiobtn" value="@Model.Item2[i, 2]"></td>*@
                         </tr>
                     }
                 </table>
@@ -67,5 +65,5 @@
         }
     </div>
 </div>
-
+<script src = "/js/getsubtitle.js"></script>
 
