--- a/EnglishBySubtitle.Mvc/Views/Shared/Error.cshtml
+++ b/EnglishBySubtitle.Mvc/Views/Shared/Error.cshtml
@@ -1,25 +1,36 @@
 ﻿@model ErrorViewModel
 @{
     ViewData["Title"] = "Error";
+    Layout = "_Layout";
+    string previousUrl = (string)TempData["PreviousUrl"];
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
-
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
+@section Styles {
+    <link rel="stylesheet" href="~/css/error.css">
 }
 
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+<script src="/js/error.js"></script>
+
+<div class="container">
+    <h1 class="text-danger">Error.</h1>
+    <h2 class="text-danger">An error occurred while processing your request.</h2>
+    <p>Please try again or adjust the request parameters.</p>
+    <p>You will be automatically redirected to the main page in a <span id="countdown">5</span> second.</p>
+
+    @if (!string.IsNullOrEmpty(previousUrl))
+    {
+        <script>
+            // Вызываем функцию для автоматического перенаправления через 5 секунд
+            startCountdown();
+            redirectTo('@previousUrl', 5000); // 5000 миллисекунд = 5 секунд
+        </script>
+    }
+    else
+    {
+        <script>
+            // Вызываем функцию для автоматического перенаправления через 5 секунд
+            startCountdown();
+            redirectTo('@previousUrl', 5000); // 5000 миллисекунд = 5 секунд
+        </script>
+    }
+</div>
