--- a/EnglishBySubtitle.Mvc/wwwroot/css/site.css
+++ b/EnglishBySubtitle.Mvc/wwwroot/css/site.css
@@ -1,22 +1,103 @@
-html {
-  font-size: 14px;
+h1 {
+    color: white;
+    text-shadow: -1px -1px 0 black, /* Top-left contour */
+    1px -1px 0 black, /*Top-right contour*/
+    -1px 1px 0 black, /*Bottom-left contour*/
+    1px 1px 0 black; /*Bottom- right contour*/
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+.h1 {
+    border: 2px solid green;
+    height: 100%;
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+.prime_block {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    box-sizing: border-box;
+    border: 3px solid yellow;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
+/*.parent_block {
+    display: flex;
+    align-items: stretch;
+    flex-direction: column;
+    box-sizing: border-box;
+    height: 100%;
+    width: auto;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);*/
+/*margin: 100px 200px;*/
+/*border: 2px solid white;
+}*/
+
+.block {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    box-sizing: border-box;
+    width: 100%;
+    /*border: 15px solid green;*/
 }
 
-body {
-  margin-bottom: 60px;
+#id_block1 {
+    border-bottom: 1px solid white;
+}
+
+#id_block2 {
+    border-top: 2px solid white;
+    margin: 30px 0 0 0;
+}
+
+.h2 {
+    margin: 4px 0 0 0;
+}
+
+table {
+    width: 100%;
+    table-layout: fixed;
+}
+
+tr {
+    width: 100%;
+    height: 100%;
+    border: 3px solid white;
+}
+
+td {
+    text-align: center;
+    vertical-align: middle;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 100%;
+    color: white;
+    text-shadow: -1px -1px 0 black, /* Top-left contour */
+    1px -1px 0 black, /*Top-right contour*/
+    -1px 1px 0 black, /*Bottom-left contour*/
+    1px 1px 0 black; /*Bottom- right contour*/
+    border: 3px solid green;
+}
+
+.td_left {
+    flex: 0 0 auto;
+}
+
+.td_right {
+    flex: 1 0 0;
+}
+
+.tr_active:hover {
+    background-color: lightgray;
+    cursor: pointer;
+}
+
+.block::-webkit-scrollbar {
+    width: 8px;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.block::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.7);
 }
