--- a/EnglishBySubtitle.Mvc/wwwroot/css/other-pages.css
+++ b/EnglishBySubtitle.Mvc/wwwroot/css/other-pages.css
@@ -74,7 +74,7 @@ footer {
 }
 
 .logo_link {
-    text-decoration: none; /* Убирает подчеркивание */
+    text-decoration: none;
 }
 
 .search {
@@ -151,10 +151,11 @@ footer {
 
 h1, h2 {
     color: white;
-    text-shadow: -1px -1px 0 black, /* Top-left contour */
-    1px -1px 0 black, /*Top-right contour*/
-    -1px 1px 0 black, /*Bottom-left contour*/
-    1px 1px 0 black; /*Bottom- right contour*/
+    text-shadow: 
+    -1px -1px 0 black, /* Top-left contour */
+    1px -1px 0 black,  /*Top-right contour*/
+    -1px 1px 0 black,  /*Bottom-left contour*/
+    1px 1px 0 black;   /*Bottom- right contour*/
 }
 
 .center_content_block {
@@ -267,7 +268,6 @@ h1, h2 {
     flex-direction: column;
     box-sizing: border-box;
     width: 100%;
-    /*border: 15px solid green;*/
 }
 
 #search_container_h2_table1 {
@@ -292,7 +292,6 @@ tr {
     width: 100%;
     height: 100%;
     border: 1px solid grey;
-    /*border: 3px solid white;*/
 }
 
 td {
@@ -302,11 +301,11 @@ td {
     text-overflow: ellipsis;
     max-width: 100%;
     color: white;
-    text-shadow: -1px -1px 0 black, /* Top-left contour */
-    1px -1px 0 black, /*Top-right contour*/
-    -1px 1px 0 black, /*Bottom-left contour*/
-    1px 1px 0 black; /*Bottom- right contour*/
-    /*border: 3px solid green;*/
+    text-shadow: 
+    -1px -1px 0 black, /* Top-left contour */
+    1px -1px 0 black,  /*Top-right contour*/
+    -1px 1px 0 black,  /*Bottom-left contour*/
+    1px 1px 0 black;   /*Bottom- right contour*/
 }
 
 .td_left {
